--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.github.clemoseitano:incar_bt_fp:1c8452f0c1'
+    implementation 'com.github.clemoseitano:incar_bt_fp:0.0.1'
 }
